# Nightmare

./: .gitignore  CMakeLists.txt  README.md
includes/GLFW_internal/: glfw_base.h
includes/imgui/: imgui.h
includes/renderer/: vulkan_base.h
includes/stb/: stb.h
libs/: SOIL.lib  assimp-vc142-mt.exp  chipmunk.exp  chipmunk.lib  freetype.lib  glfw3.lib
src/: VulkanMemoryAllocator.cpp  imgui.cpp  imgui_impl_vulkan.cpp  main.cpp  vmaAllocator.cpp
src/glsl/: compile_shaders.bat  fragTriangle.spv  vertTriangle.spv  vertexTriangle.vert
